# -

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  spec
app/: main.py
app/api/: deps.py
examples/: plan_scalp.json  plan_trend.json
infra/alertmanager/: alertmanager.yml
infra/grafana/dashboards/: system.json
infra/grafana/provisioning/dashboards/: dashboards.yml
migrations/: env.py
migrations/versions/: 0001_initial.py
