[project]
name = "okx-autotrade"
version = "0.1.0"
description = "Automated trading + review system for OKX (paper-first)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
  "alembic>=1.13",
  "celery>=5.3",
  "redis>=5.0",
  "httpx>=0.26",
  "python-dotenv>=1.0",
  "orjson>=3.9",
  "tenacity>=8.2",
  "pandas>=2.2",
  "numpy>=1.26",
  "prometheus-client>=0.20",
  "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.3",
  "black>=24.2",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.ruff.lint]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "packages"]
